    - Added robochargers and robostashers, like the thing from that one mod.

  Changes:
    - Gave glass its own row of recipes, and moved science bottles there.
    - Changed vacuum tubes crafting time from 5 to 7 seconds, and CRT's from 20 to 28.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon
    - Changed solar panel equipment 2 into solar panel equipment MK2.
    - Fixed some leeching icons having wrong stuff in it in my crusade to make this mod smaller.
    - Fixed some locale issues.
    - (#3) Fixed processing integrated circuit molding giving advanced integrated circuits.

---------------------------------------------------------------------------------------------------
Version: 0.5.115
  The clockman reference Update:

  Fixes:
    - Fixed placement of the battery charging buildings.
    - Fixed chemical resin not being craftable without unlocking PTM science.

---------------------------------------------------------------------------------------------------
Version: 0.5.114
  The hawaii: part 1 1 Update:

  Changes:
    - Changed it so the CO2 nullifying recipe is visible in the technology tree, so players can see its information.

  Fixes:
    - Fixed changelog of previous update.
    - Fixed advanced battery chargings technology name being weird.

---------------------------------------------------------------------------------------------------
Version: 0.5.113
  The hello, i like money Update:

  Fixes:
    - Fixed assembler 3's not hiding its fluid boxes when no fluid recipe is selected.
---------------------------------------------------------------------------------------------------
Version: 0.5.112
  The pennyjim if you read this you have to play PM, i dont make the rules Update:

  Fixes:
    - Fixed the tinned glass melting technology locale.
